--- a/FixNode/Makefile.am
+++ b/FixNode/Makefile.am
@@ -32,9 +32,9 @@ fixnode_SOURCES = \
 	triload.cxx triload.hxx
 
 fixnode_LDADD = \
-	$(top_builddir)/Lib/DEM/libDEM.la \
-        $(top_builddir)/Lib/Bucket/libBucket.la \
-        $(top_builddir)/Lib/zlib/libz.la
+	$(top_builddir)/Lib/DEM/libDEM.a \
+        $(top_builddir)/Lib/Bucket/libBucket.a \
+        $(top_builddir)/Lib/zlib/libz.a
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
 
@@ -46,6 +46,9 @@ CXXFLAGS = -g
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.4  1998/07/30 23:49:24  curt
+# Removed libtool support.
+#
 # Revision 1.3  1998/04/18 04:02:54  curt
 # Added zlib support in placed and other misc. tweaks.
 #
