--- a/configure.in
+++ b/configure.in
@@ -5,6 +5,16 @@ dnl
 
 AC_INIT(Simulator/Aircraft/aircraft.c)
 
+dnl specify the compiled flight model
+AC_ARG_WITH(flight-model, [  --with-flight-model        Specify the compiled in flight model (navion, cherokee)])
+
+if test "x$with_flight_model" = "xcherokee" ; then
+    echo "Building with cherokee flight model"
+else 
+    echo "Building with navion flight model"
+fi
+AM_CONDITIONAL(ENABLE_CHEROKEE, test "x$with_flight_model" = "xcherokee")
+
 dnl Let the Win32 user specify if they want to build with the SGI
 dnl opengl.dll as opposed to the more standard openg32.dll
 AC_ARG_WITH(sgiopengl, [  --with-sgiopengl        Build against opengl.dll glu.dll and glut.dll])
