--- a/config.h.in
+++ b/config.h.in
@@ -72,6 +72,9 @@
 /* Define if you have the getitimer function.  */
 #undef HAVE_GETITIMER
 
+/* Define if you have the getrusage function.  */
+#undef HAVE_GETRUSAGE
+
 /* Define if you have the gettimeofday function.  */
 #undef HAVE_GETTIMEOFDAY
 
