--- a/configure.in
+++ b/configure.in
@@ -6,7 +6,7 @@ dnl
 AC_INIT(Simulator/Aircraft/aircraft.c)
 
 dnl specify the compiled flight model
-AC_ARG_WITH(flight-model, [  --with-flight-model        Specify the compiled in flight model (navion, cherokee)])
+AC_ARG_WITH(flight-model, [  --with-flight-model=xxx Specify the flight model (navion, cherokee)])
 
 if test "x$with_flight_model" = "xcherokee" ; then
     echo "Building with cherokee flight model"
@@ -17,10 +17,10 @@ AM_CONDITIONAL(ENABLE_CHEROKEE, test "x$with_flight_model" = "xcherokee")
 
 dnl Let the Win32 user specify if they want to build with the SGI
 dnl opengl.dll as opposed to the more standard openg32.dll
-AC_ARG_WITH(sgiopengl, [  --with-sgiopengl        Build against opengl.dll glu.dll and glut.dll])
+AC_ARG_WITH(sgi-opengl, [  --with-sgi-opengl       Build against SGI's opengl.dll glu.dll and glut.dll])
 
 dnl Initialize the automake stuff
-AM_INIT_AUTOMAKE(FlightGear, 0.52)
+AM_INIT_AUTOMAKE(FlightGear, 0.53)
 
 dnl Checks for programs.
 AC_PROG_MAKE_SET
@@ -130,7 +130,11 @@ if test "x$ac_cv_header_windows_h" != "xyes" ; then
 	AC_CHECK_LIB(MesaGLU, gluLookAt)
     fi
 
+    dnl check for glut
     AC_CHECK_LIB(glut, glutGetModifiers)
+
+    dnl test for glutGameModeString
+    AC_CHECK_LIB(glut, glutGameModeString)
 else
     dnl Win32 is a little wierd because it has to try to handle the various
     dnl winbloze-isms.  We'll just do this manually for now.
@@ -180,6 +184,7 @@ else
     echo "    adding -luser32 -lgdi32"
     LIBS="$LIBS -luser32 -lgdi32"
     ac_cv_lib_glut_glutGetModifiers="yes"
+    ac_cv_lib_glut_glutGameModeString="yes"
 fi
 
 dnl Checks for header files.
@@ -204,6 +209,15 @@ if test "x$ac_cv_lib_glut_glutGetModifiers" = "xno"; then
     echo 
     echo "Unable to find the necessary OpenGL or GLUT libraries."
     echo "See config.log for automated test details and results ..."
+    exit 1
+fi
+
+if test "x$ac_cv_lib_glut_glutGameModeString" = "xno"; then
+    echo
+    echo "Your version of glut doesn't support game mode."
+    echo "You need to fetch and install the latest version of glut from:"
+    echo
+    echo "    http://reality.sgi.com/opengl/glut3/glut3.html"
     exit 1
 fi
 
