Moved files from Scenery/ to Object/

--- a/Simulator/Makefile.am
+++ b/Simulator/Makefile.am
@@ -1,5 +1,6 @@
 SUBDIRS = \
 	Aircraft \
+	Airports \
 	Astro \
 	Autopilot \
 	Cockpit \
@@ -7,6 +8,7 @@ SUBDIRS = \
 	Flight \
 	GUI \
 	Joystick \
+	Objects \
 	Scenery \
 	Time \
 	Weather \
