--- a/Main/Makefile.am
+++ b/Main/Makefile.am
@@ -43,6 +43,7 @@ fgfs_LDADD = \
 	$(top_builddir)/Simulator/Flight/Slew/libSlew.a \
 	$(top_builddir)/Simulator/GUI/libGUI.a \
 	$(top_builddir)/Simulator/Scenery/libScenery.a \
+	$(top_builddir)/Simulator/Objects/libObjects.a \
 	$(top_builddir)/Simulator/Time/libTime.a \
 	$(top_builddir)/Simulator/Weather/libWeather.a \
         $(top_builddir)/Simulator/Joystick/libJoystick.a \
