Tweaks for final 0.53

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,12 @@
 EXTRA_DIST = \
+	auto_ptr.hxx \
 	config.h.in \
 	cmdargs.h \
+	fg_callback.hxx \
 	fg_constants.h \
 	fg_limits.h \
 	fg_typedefs.h \
+	fg_stl_config.h \
 	fg_types.h \
 	fg_zlib.h \
 	general.h \
