--- a/Misc/Makefile.am
+++ b/Misc/Makefile.am
@@ -3,7 +3,9 @@
 noinst_LIBRARIES = libMisc.a
 
 libMisc_a_SOURCES = \
-	fgstream.cxx \
-	zfstream.cxx
+	fgstream.cxx fgstream.hxx \
+	stopwatch.hxx \
+	strutils.cxx strutils.hxx \
+	zfstream.cxx zfstream.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
