--- a/Airports/Makefile.am
+++ b/Airports/Makefile.am
@@ -1,5 +1,7 @@
 noinst_LIBRARIES = libAirports.a
 
-libAirports_a_SOURCES = simple.cxx simple.hxx
+libAirports_a_SOURCES = \
+	genapt.cxx genapt.hxx \
+	simple.cxx simple.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
