--- a/Astro/Makefile.am
+++ b/Astro/Makefile.am
@@ -1,11 +1,18 @@
 noinst_LIBRARIES = libAstro.a
 
 libAstro_a_SOURCES = \
+	celestialBody.cxx celestialBody.hxx \
+	jupiter.cxx jupiter.hxx \
+	mars.cxx mars.hxx \
+	mercury.cxx mercury.hxx \
 	moon.cxx moon.hxx \
-	orbits.cxx orbits.hxx \
-	planets.cxx planets.hxx \
+	neptune.cxx neptune.hxx \
+	saturn.cxx saturn.hxx \
 	sky.cxx sky.hxx \
+	solarsystem.cxx solarsystem.hxx \
+	star.cxx star.hxx \
 	stars.cxx stars.hxx \
-	sun.cxx sun.hxx
+	uranus.cxx uranus.hxx \
+	venus.cxx venus.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
