Support for changes to libDEM.a

--- a/FixNode/Makefile.am
+++ b/FixNode/Makefile.am
@@ -34,6 +34,7 @@ fixnode_SOURCES = \
 fixnode_LDADD = \
 	$(top_builddir)/Lib/DEM/libDEM.a \
         $(top_builddir)/Lib/Bucket/libBucket.a \
+        $(top_builddir)/Lib/Misc/libMisc.a \
         $(top_builddir)/Lib/zlib/libz.a
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
@@ -46,6 +47,9 @@ CXXFLAGS = -g
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.5  1998/09/19 18:01:26  curt
+# Support for changes to libDEM.a
+#
 # Revision 1.4  1998/07/30 23:49:24  curt
 # Removed libtool support.
 #
