--- a/Autopilot/Makefile.am
+++ b/Autopilot/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES = libAutopilot.a
 
-libAutopilot_a_SOURCES = autopilot.c autopilot.h
+libAutopilot_a_SOURCES = autopilot.cxx autopilot.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
