--- a/configure.in
+++ b/configure.in
@@ -276,6 +276,7 @@ AC_OUTPUT( \
 	Tools/FixNode/Makefile \
 	Tools/FixObj/Makefile \
 	Tools/GenAirports/Makefile \
+	Tools/Makedir/Makefile \
 	Tools/SplitTris/Makefile \
 	Tools/Stripe_w/Makefile \
 	Tools/Tri2obj/Makefile \
