Removed Makefile.extra

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = Include Lib Simulator Tools Tests
 
-EXTRA_DIST = Makefile.extra README.Unix README.Linux README.Win32 \
+EXTRA_DIST = README.Unix README.Linux README.Win32 \
 	README.autoconf README.running Thanks acsite.m4
 
 dist-hook:
