Renamed .c -> .h so we can start adding c++ supporting routines.

--- a/Math/Makefile.am
+++ b/Math/Makefile.am
@@ -5,7 +5,7 @@ libMath_a_SOURCES = \
 	MAT3inv.c \
 	MAT3mat.c \
 	MAT3vec.c \
-	fg_geodesy.c fg_geodesy.h \
+	fg_geodesy.cxx fg_geodesy.hxx \
 	fg_random.c fg_random.h \
 	interpolater.cxx interpolater.hxx \
 	mat3.h mat3defs.h mat3err.h \
