--- a/FDM/Makefile.am
+++ b/FDM/Makefile.am
@@ -2,6 +2,6 @@ SUBDIRS	= LaRCsim Slew
 
 noinst_LIBRARIES = libFlight.a
 
-libFlight_a_SOURCES = flight.cxx flight.hxx
+libFlight_a_SOURCES = flight.cxx flight.hxx LaRCsim.cxx LaRCsim.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
