--- a/Aircraft/Makefile.am
+++ b/Aircraft/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES = libAircraft.a
 
-libAircraft_a_SOURCES = aircraft.c aircraft.h
+libAircraft_a_SOURCES = aircraft.cxx aircraft.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
