--- a/Controls/Makefile.am
+++ b/Controls/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES = libControls.a
 
-libControls_a_SOURCES = controls.c controls.h
+libControls_a_SOURCES = controls.cxx controls.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Simulator
