--- a/Weather/Makefile.am
+++ b/Weather/Makefile.am
@@ -4,6 +4,6 @@
 
 noinst_LIBRARIES = libWeather.a
 
-libWeather_a_SOURCES = weather.c weather.h
+libWeather_a_SOURCES = weather.cxx weather.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
