Renamed joystick.[ch] to joystick.[ch]xx Added js.hxx which is Steve's joystick interface class.

--- a/Joystick/Makefile.am
+++ b/Joystick/Makefile.am
@@ -1,5 +1,7 @@
+EXTRA_DIST = js.cxx
+
 noinst_LIBRARIES = libJoystick.a
 
-libJoystick_a_SOURCES = joystick.c joystick.h
+libJoystick_a_SOURCES = joystick.cxx joystick.hxx js.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
