Only build the Joystick lib if joystick support is available.

--- a/Simulator/Makefile.am
+++ b/Simulator/Makefile.am
@@ -1,3 +1,9 @@
+if ENABLE_JOYSTICK_SUPPORT
+JOYSTICK_DIRS = Joystick
+else
+JOYSTICK_DIRS = 
+endif
+
 SUBDIRS = \
 	Aircraft \
 	Airports \
@@ -7,7 +13,7 @@ SUBDIRS = \
 	Controls \
 	Flight \
 	GUI \
-	Joystick \
+	$(JOYSTICK_DIRS) \
 	Objects \
 	Scenery \
 	Time \
