--- a/Makedir/Makefile.am
+++ b/Makedir/Makefile.am
@@ -2,6 +2,8 @@ bin_PROGRAMS = makedir
 
 makedir_SOURCES = makedir.cxx
 
-makedir_LDADD = $(top_builddir)/Lib/Bucket/libBucket.a
+makedir_LDADD = \
+	$(top_builddir)/Lib/Bucket/libBucket.a \
+	$(base_LIBS)
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
