Added the Serial subdirectory

--- a/Lib/Makefile.am
+++ b/Lib/Makefile.am
@@ -4,4 +4,21 @@ else
 AUDIO_DIRS = 
 endif
 
-SUBDIRS = $(AUDIO_DIRS) Bucket Debug DEM gpc Math Misc PUI XGL zlib
+if ENABLE_UNIX_SERIAL
+SERIAL_DIRS = Serial
+else
+SERIAL_DIRS =
+endif
+
+SUBDIRS = \
+	$(AUDIO_DIRS) \
+	Bucket \
+	Debug \
+	DEM \
+	gpc \
+	Math \
+	Misc \
+	PUI \
+	$(SERIAL_DIRS) \
+	XGL\
+	zlib
