Reference the proper file name of fg_traits.hxx

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,7 @@ EXTRA_DIST = \
 	compiler.h \
 	fg_callback.hxx \
 	fg_constants.h \
+	fg_traits.hxx \
 	fg_typedefs.h \
 	fg_stl_config.h \
 	fg_zlib.h \
