Add bucketutils.hxx to source list.

--- a/Bucket/Makefile.am
+++ b/Bucket/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES = libBucket.a
 
-libBucket_a_SOURCES = bucketutils.c bucketutils.h
+libBucket_a_SOURCES = bucketutils.c bucketutils.h bucketutils.hxx
 
 INCLUDES += -I$(top_builddir)
